syntax = "proto3";

package user;

option go_package = "service-1-user/proto";



service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  
  // Authentication methods
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}



message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}



message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3; // Password for new user
}

message CreateUserResponse {
  string code = 1;
  string message = 2;
  User user = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  string code = 1;
  string message = 2;
  User user = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  string code = 1;
  string message = 2;  
  User user = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  string code = 1;
  string message = 2;
  bool success = 3;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUsersResponse {
  string code = 1;
  string message = 2;
  repeated User users = 3;
  int64 total = 4;
  int32 page = 5;
  int32 size = 6;
  bool has_more = 7;
}


// Authentication
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string code = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
  User user = 5;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string code = 1;
  string message = 2;
  bool valid = 3;
  int64 user_id = 4;
  string email = 5;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  string code = 1;
  string message = 2;
  bool success = 3;
}